--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assest/logo-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logo-removebg-preview.png" type="image/x-icon">
 </head>
 
 <body>
